--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -10,6 +10,7 @@ framework:
                     use_notify: true
                     check_delayed_interval: 60000
                 retry_strategy:
+                    delay: 500
                     max_retries: 3
                     multiplier: 2
             failed: 'doctrine://default?queue_name=failed'
