--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -1,5 +1,10 @@
 framework:
     messenger:
+        buses:
+            messenger.bus.default:
+                middleware:
+                    - App\Messenger\AuditMiddleware
+
         failure_transport: failed
 
         transports:
