Trouble during functional test 2, 3, 4: ErrorException: An exception occurred in the driver: SQLSTATE[HY000] [1049] Unknown database 'symfony_messenger_test'

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -40,3 +40,10 @@ when@dev:
             # transports:
             #     async: 'sync://'
             #     async_priority_high: 'sync://'
+
+when@test:
+    framework:
+        messenger:
+            transports:
+                async: 'in_memory://'
+                async_priority_high: 'in_memory://'
